--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -9,8 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "0.19.2",
+    "bluebird": "3.7.2",
+    "bootstrap": "4.5.0",
+    "bootstrap-vue": "2.15.0",
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
+    "vue": "2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
